pgadmin/pgadmin-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin-deployment
  template:
    metadata:
      name: pgadmin-pod
      labels:
        app: pgadmin-deployment
    spec:
      containers:
        - name: pgadmin-container
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
