pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: dev
spec:
  selector:
    app: pgadmin-deployment
  ports:
    - port: 9080
      targetPort: 80
  type: ClusterIP
